@@ -1319,7 +1319,7 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
       addNumberToKeepInRequest = false;
       backupKeepParamName = ReplicationHandler.NUMBER_BACKUPS_TO_KEEP_INIT_PARAM;
     }
-    
+
     masterJetty.stop();
     master.copyConfigFile(CONF_DIR + configFile, 
                           "solrconfig.xml");
@@ -1339,15 +1339,29 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
       volatile String fail = null;
       final boolean addNumberToKeepInRequest;
       String backupKeepParamName;
-      BackupThread(boolean addNumberToKeepInRequest, String backupKeepParamName) {
+      String backupName;
+      String cmd;
+      BackupThread(boolean addNumberToKeepInRequest, String backupKeepParamName, String command) {
         this.addNumberToKeepInRequest = addNumberToKeepInRequest;
         this.backupKeepParamName = backupKeepParamName;
+        this.cmd = command;
+      }
+      BackupThread(String backupName, String command) {
+        this.backupName = backupName;
+        addNumberToKeepInRequest = false;
+        this.cmd = command;
       }
       @Override
       public void run() {
-        String masterUrl = 
-          buildUrl(masterJetty.getLocalPort()) + "/replication?command=" + ReplicationHandler.CMD_BACKUP + 
-          (addNumberToKeepInRequest ? "&" + backupKeepParamName + "=1" : "");
+        String masterUrl = null;
+        if(backupName != null) {
+          masterUrl = buildUrl(masterJetty.getLocalPort()) + "/replication?command=" + cmd +
+              "&name=" +  backupName;
+        } else {
+          masterUrl = buildUrl(masterJetty.getLocalPort()) + "/replication?command=" + cmd +
+              (addNumberToKeepInRequest ? "&" + backupKeepParamName + "=1" : "");
+        }
+
         URL url;
         InputStream stream = null;
         try {
@@ -1362,20 +1376,45 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
 
       };
     };
+
+    class CheckDeleteBackupStatus {
+      String response = null;
+      boolean success = false;
+      String fail = null;
+
+      public void fetchStatus() {
+        String masterUrl = buildUrl(masterJetty.getLocalPort()) + "/replication?command=" + ReplicationHandler.CMD_DETAILS;
+        URL url;
+        InputStream stream = null;
+        try {
+          url = new URL(masterUrl);
+          stream = url.openStream();
+          response = IOUtils.toString(stream, "UTF-8");
+          if(response.contains("<str name=\"status\">success</str>")) {
+            success = true;
+          }
+          stream.close();
+        } catch (Exception e) {
+          fail = e.getMessage();
+        } finally {
+          IOUtils.closeQuietly(stream);
+        }
+      };
+    }
     
-    class CheckStatus extends Thread {
-      volatile String fail = null;
-      volatile String response = null;
-      volatile boolean success = false;
-      volatile String backupTimestamp = null;
+    class CheckBackupStatus {
+      String fail = null;
+      String response = null;
+      boolean success = false;
+      String backupTimestamp = null;
       final String lastBackupTimestamp;
       final Pattern p = Pattern.compile("<str name=\"snapshotCompletedAt\">(.*?)</str>");
       
-      CheckStatus(String lastBackupTimestamp) {
+      CheckBackupStatus(String lastBackupTimestamp) {
         this.lastBackupTimestamp = lastBackupTimestamp;
       }
-      @Override
-      public void run() {
+
+      public void fetchStatus() {
         String masterUrl = buildUrl(masterJetty.getLocalPort()) + "/replication?command=" + ReplicationHandler.CMD_DETAILS;
         URL url;
         InputStream stream = null;
@@ -1405,29 +1444,41 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
     
     File[] snapDir = new File[2];
     String firstBackupTimestamp = null;
+    boolean namedBackup = true;
+    String[] backupNames = null;
+    if(namedBackup) {
+      backupNames = new String[2];
+    }
     for(int i=0 ; i<2 ; i++) {
-      BackupThread backupThread = new BackupThread(addNumberToKeepInRequest, backupKeepParamName);
+      BackupThread backupThread;
+      final String backupName = TestUtil.randomSimpleString(random(), 1, 20);
+      if(!namedBackup) {
+        backupThread = new BackupThread(addNumberToKeepInRequest, backupKeepParamName, ReplicationHandler.CMD_BACKUP);
+      } else {
+        backupThread = new BackupThread(backupName, ReplicationHandler.CMD_BACKUP);
+        backupNames[i] = backupName;
+      }
       backupThread.start();
       
       File dataDir = new File(master.getDataDir());
       
       int waitCnt = 0;
-      CheckStatus checkStatus = new CheckStatus(firstBackupTimestamp);
+      CheckBackupStatus checkBackupStatus = new CheckBackupStatus(firstBackupTimestamp);
       while(true) {
-        checkStatus.run();
-        if(checkStatus.fail != null) {
-          fail(checkStatus.fail);
+        checkBackupStatus.fetchStatus();
+        if(checkBackupStatus.fail != null) {
+          fail(checkBackupStatus.fail);
         }
-        if(checkStatus.success) {
+        if(checkBackupStatus.success) {
           if(i==0) {
-            firstBackupTimestamp = checkStatus.backupTimestamp;
+            firstBackupTimestamp = checkBackupStatus.backupTimestamp;
             Thread.sleep(1000); //ensure the next backup will have a different timestamp.
           }
           break;
         }
         Thread.sleep(200);
         if(waitCnt == 20) {
-          fail("Backup success not detected:" + checkStatus.response);
+          fail("Backup success not detected:" + checkBackupStatus.response);
         }
         waitCnt++;
       }
@@ -1435,9 +1486,9 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
       if(backupThread.fail != null) {
         fail(backupThread.fail);
       }
-  
-      File[] files = dataDir.listFiles(new FilenameFilter() {
-        
+      File[] files = null;
+      if(!namedBackup) {
+        files = dataDir.listFiles(new FilenameFilter() {
           @Override
           public boolean accept(File dir, String name) {
             if(name.startsWith("snapshot")) {
@@ -1446,6 +1497,17 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
             return false;
           }
         });
+      } else {
+        files = dataDir.listFiles(new FilenameFilter() {
+          @Override
+          public boolean accept(File dir, String name) {
+            if(name.startsWith("snapshot." + backupName)) {
+              return true;
+            }
+            return false;
+          }
+        });
+      }
       assertEquals(1, files.length);
       snapDir[i] = files[0];
       Directory dir = new SimpleFSDirectory(snapDir[i].getAbsoluteFile());
@@ -1455,11 +1517,39 @@ public class TestReplicationHandler extends SolrTestCaseJ4 {
       assertEquals(nDocs, hits.totalHits);
       reader.close();
       dir.close();
+
+      if(!namedBackup && snapDir[0].exists()) {
+        fail("The first backup should have been cleaned up because " + backupKeepParamName + " was set to 1.");
+      }
     }
-    if(snapDir[0].exists()) {
-      fail("The first backup should have been cleaned up because " + backupKeepParamName + " was set to 1.");
+
+    for(int i=0; i<2; i++) {
+      //Test Deletion of named backup
+      BackupThread deleteBackupThread = new BackupThread(backupNames[i], ReplicationHandler.CMD_DELETE_BACKUP);
+      deleteBackupThread.start();
+      int waitCnt = 0;
+      CheckDeleteBackupStatus checkDeleteBackupStatus = new CheckDeleteBackupStatus();
+      while(true) {
+        checkDeleteBackupStatus.fetchStatus();
+        if(checkDeleteBackupStatus.fail != null) {
+          fail(checkDeleteBackupStatus.fail);
+        }
+        if(checkDeleteBackupStatus.success) {
+          break;
+        }
+        Thread.sleep(200);
+        if(waitCnt == 20) {
+          fail("Delete Backup success not detected:" + checkDeleteBackupStatus.response);
+        }
+        waitCnt++;
+      }
+
+      if(deleteBackupThread.fail != null) {
+        fail(deleteBackupThread.fail);
+      }
     }
     
+    //nocommit - Should move this to tearDown as it fails to delete the dir in case it fails?
     for(int i=0 ; i< snapDir.length ; i++) {
       AbstractSolrTestCase.recurseDelete(snapDir[i]); // clean up the snap dir
     }
