@@ -106,6 +106,8 @@ Other Changes
 * SOLR_3671: Fix DIHWriter interface usage so users may implement writers that output
   documents to a location external to Solr (ex. a NoSql db). (Roman Chyla via James Dyer)
 
+* SOLR-5340: Add support for named snapshots (Varun Thacker via Noble Paul)
+
 Build
 ---------------------
 
